@@ -2,6 +2,18 @@
 
 	Resynced with GNU Classpath.
 
+	2005-02-27  Roman Kennke  <roman@ontographics.com>
+
+        * javax/swing/CellRendererPane.java:
+        implemented all methods of this class.
+        reformatted all wrong formatted code.
+        * javax/swing/plaf/basic/BasicListUI.java
+        (paintCell): use CellRendererPane for painting the cells.
+
+2005-03-02  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-02-27  Audrius Meskauskas  <audriusa@bluewin.ch>
 
         * javax/swing/JComboBox.java (constructors): selecting the
